Correction de l'alignement de la modale pour les commandes

--- a/styles/Modal.scss
+++ b/styles/Modal.scss
@@ -11,83 +11,75 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
-  overflow: auto;
+}
 
-  .modal-content {
-    background: #fff;
-    padding: 20px;
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 500px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 1001;
+  text-align: center;
+
+  .modal-close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: #333;
+    cursor: pointer;
+  }
+
+  .description-title {
+    margin: 20px 0 0 0;
+    color: #130202;
+    text-decoration: underline;
+  }
+
+  .modal-image {
+    max-width: 100%;
+    height: auto;
+    max-height: 300px;
     border-radius: 8px;
-    width: 90%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
-    z-index: 1001;
-    text-align: center;
-    overflow: auto;
+    margin-bottom: 20px;
+    object-fit: cover;
+  }
 
-    // Ajouter un bouton de fermeture
-    .modal-close-button {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: none;
+  .modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
+    button {
+      padding: 10px 20px;
       border: none;
-      font-size: 1.5rem;
-      color: #333;
+      border-radius: 4px;
       cursor: pointer;
-    }
+      margin-bottom: 10px;
 
-    // Ingrédient => dans la ProductCard
-    .description-title {
-      margin: 20px 0 0 0;
-      color: #130202;
-      text-decoration: underline;
-    }
+      &:first-child {
+        background-color: #28a745;
+        color: #fff;
+      }
 
-    // Image dans la modale
-    .modal-image {
-      max-width: 100%;
-      height: auto;
-      max-height: 300px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      object-fit: cover;
-    }
-
-    // Boutons dans la modale
-    .modal-buttons {
-      margin-top: 20px;
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-
-      button {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-bottom: 10px;
-
-        &:first-child {
-          background-color: #28a745;
-          color: #fff;
-        }
-
-        &:last-child {
-          background-color: #dc3545;
-          color: #fff;
-        }
+      &:last-child {
+        background-color: #dc3545;
+        color: #fff;
       }
     }
   }
 }
 
-// Ajout d'une classe pour le body lorsque la modale est ouverte
 .modal-open {
   overflow: hidden;
 }
 
-// Responsive Design
 @media (max-width: 1200px) {
   .modal-content {
     padding: 15px;
